Changes in create quotes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <li class="logged-in">
             <a href="#" class="grey-text" id="logout">Logout</a>
           </li>
-          <li class="admin">
+          <li class="admin" style="display: none;">
             <a href="#" class="grey-text modal-trigger" data-target="modal-create">Create Quote</a>
           </li>
           <li class="logged-out">
