--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <ul class="sidenav grey lighten-2" id="mobile-menu">
         <li class="logged-in" ><a href="#" class="black-text modal-trigger" data-target="modal-account">Account</a></li>
         <li class="logged-in"><a href="#" class="black-text" id="logout2">Logout</a></li>
-        <li class="admin" ><a href="#" class="black-text modal-trigger" data-target="modal-create">Create Quote</a></li>
+        <li class="admin" ><a href="#" class="black-text modal-trigger"style="display: none;" data-target="modal-create">Create Quote</a></li>
         <li class="logged-out" ><a href="#" class="black-text modal-trigger" data-target="modal-login">Login</a></liclass="logged-in">
         <li class="logged-out" ><a href="#" class="black-text modal-trigger" data-target="modal-signup">Signup</a></li>
     </ul>
